<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity2"
    android:background="@color/WhiteSmoke">

    <ImageView
        android:id="@+id/bioImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/img_desc"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />


    <TextView
        android:id="@+id/whyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio_name"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/biodata"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/longDescTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/whyTextView"
        app:layout_constraintVertical_bias="0.220" />

    <TextView
        android:id="@+id/longDescTextView"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:text="@string/long_desc"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/biodata"
        app:layout_constraintVertical_bias="0.350" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/longDescTextView"
        app:layout_constraintVertical_bias="0.606" />


</androidx.constraintlayout.widget.ConstraintLayout>